--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root" style="min-height: 100%; width: 100%; padding-top: 50px; margin-bottom: -250px; padding-bottom: 250px;"></div>
+  <div id="root" style="min-height: 100%; width: 100%; padding-top: 50px; margin-bottom: -250px; padding-bottom: 250px; background-color: #98fb9899;"></div>
   <span style="display: grid; grid-template-columns: 1fr; grid-template-rows: 1fr;">
     <span style="grid-area: 1 / 1 / 2 / 2; margin-top: 5%;"><br>
       <div class="ui container">
